--- a/public/stylesheets/company-site.css
+++ b/public/stylesheets/company-site.css
@@ -7,7 +7,7 @@ body {
   background: #2f2840 url("../images/company_bg_body.gif") 50% 0 repeat;
 }
 
-a {
+a, span {
   text-decoration: none;
   color: #3e59b2;
 }
@@ -263,12 +263,5 @@ footer li a.instagram { background-position: 0 -138px; }
 
   #team p {
     padding: 0 30px 40px 30px;
-  }
-
-  #modal {
-    position: absolute;
-    left: 50%;
-    width: 400px;
-    margin-left: -200px;
   }
 }
