--- a/public/stylesheets/company-team.css
+++ b/public/stylesheets/company-team.css
@@ -5,18 +5,42 @@
   bottom: 0;
   left: 0;
   z-index: 2;
-  background: rgba(0, 0, 0, .3);
 }
 
 #modal-content {
   position:fixed;
-  padding: 36px;
+  padding: 45px;
   top:10%;
   right:15%;
   left:15%;
-  max-height:80%;
+  max-height:70%;
   background-color: white;
   z-index: 3;
   overflow-y:scroll;
-  
+}
+
+#close{
+  font-size: 36px;
+  color: gray;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+#identifiers {
+  display: flex;
+  align-items: center;
+}
+
+#bio {
+  text-align: justify;
+}
+
+span {
+  text-decoration: none;
+  color: #3e59b2;
+}
+
+#modal img {
+  width: 96px;
+  margin: 0 30px 0 0;
 }
