--- a/public/grocery-list/stylesheets/groceries.css
+++ b/public/grocery-list/stylesheets/groceries.css
@@ -1,4 +1,3 @@
-html, 
 body {
   background: #5bccb3;
   color: #16997c;
@@ -19,6 +18,15 @@ main {
 h1 {
   color: #cc183e;
   text-align: center;
+  font-size: 28px;
+  margin: 0 0 25px 0;
+}
+
+h2 {
+  color: darkslategray;
+  text-align: center;
+  font-size: 24px;
+  margin: 0 0 16px 0;
 }
 
 fieldset {
