--- a/public/photo-gallery/stylesheets/gallery.css
+++ b/public/photo-gallery/stylesheets/gallery.css
@@ -64,7 +64,11 @@ h1{
   margin: 0 0 16px 0;
 }
 
-[active=true]{
+li.active img{
   border-color: #0066cc;
   border-width: 5px;
+}
+
+figure + figure{
+  display: none;
 }
